Bug 1504033 - Ensure we don't start walking past our subtree. r=mattwoodrow

In this case aAncestor is an SVGOuterSVGFrame, and aItem is a transform item for
its AnonChildFrame.

I'm not sure if it's quite expected to have such a frame generating a
transform...

Let me know if not and I can try to dig more, but this looks intentional given
the comment in nsSVGOuterSVGAnonChildFrame.

Differential Revision: https://phabricator.services.mozilla.com/D10955